update refund request and mock
